--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -30,4 +30,4 @@ google_analytics_key:
 show_disclaimer: true
 
 # Toggle link/icon to view atom feed (/atom.xml) in sidebar
-show_atom_feed: true
+show_atom_feed: false
